--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -124,6 +124,17 @@ const DeviceDB = {
             request.onsuccess = () => resolve(request.result);
             request.onerror = () => reject(request.error);
         });
+    },
+    
+    async saveToken(token) {
+        const db = await this.init();
+        return new Promise((resolve, reject) => {
+            const tx = db.transaction([this.storeName], 'readwrite');
+            const store = tx.objectStore(this.storeName);
+            const request = store.put(token, 'device_token');
+            request.onsuccess = () => resolve();
+            request.onerror = () => reject(request.error);
+        });
     }
 };
 
